# assignment5

./: Do.hs  Guess.hs  LICENSE  README.md  answers.txt  javai.cabal
Language/Java/: Execute.hs  Monad.hs  Repl.hs  TypeCheck.hs
javai/: Main.hs
tests/: Main.hs
tests/lexer/: LE.golden  LE.java  Lex1.java  Lex10.golden  Lex10.java  Lex11.golden  Lex11.java  Lex12.golden  Lex12.java  Lex13.golden  Lex13.java  Lex14.golden  Lex15.golden  Lex15.java  Lex16.golden  Lex16.java  Lex17.golden  Lex18.golden  Lex18.java  Lex19.golden  Lex2.java  Lex20.golden  Lex20.java  Lex3.java  Lex4.java  Lex5.java  Lex6.java  Lex7.java  Lex8.golden  Lex9.golden  Lex9.java  TypeArg.golden  TypeArg.java
tests/repl/: Arith.golden  Arith.java  Bool.golden  Bool.java  Plus.golden  Plus.java  Repl1.golden  Repl1.java  Repl2.golden  Repl2.java  Repl3.golden  Repl3.java  Repl4.golden  Repl4.java
